# SampleProject

./: LICENSE  LICENSE.md  README.md  Sample.csv
Sample/: Program.cs  Sample.csproj
Sample.native/: buildshader.sh  main.c  meson.build  smaPass1.h  smaPass1.spv  smaPass2.h  smaPass2.spv  sma_shaderPass1.comp  sma_shaderPass2.comp
Sample/Controllers/: ApiController.cs  HomeController.cs
Sample/Models/: ErrorViewModel.cs  SubmitJobModel.cs  WorkItemModel.cs
Sample/Native/: LibComputeSample.cs
Sample/Processor/: ISMAIndicatorProcessor.cs  PricePoint.cs  SMAIndicatorProcessor.cs  WorkItem.cs
Sample/Properties/: launchSettings.json
Sample/Views/Home/: Index.cshtml  PendingJob.cshtml
Sample/Views/Shared/: _Layout.cshtml
